--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,9 +7,11 @@ http {
   port = 9000
 }
 
-services {
-  ip-api {
-    host = "ip-api.com"
-    port = 80
-  }
+ip {
+  host = "ip-api.com"
+  port = 80
+}
+
+stupid {
+  saying = "I want to eat a whole brick!"
 }
